# FIFA_2026_Predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: update.yml
.streamlit/: config.toml
app/: streamlit_app.py
artifacts/: cup_odds.parquet  meta.json  metrics.json  next_games.parquet  prev_games.parquet  rankings.parquet
data/: results.csv
docs/superpowers/plans/: 2026-06-19-fifa-2026-predictor-mvp.md
docs/superpowers/specs/: 2026-06-19-fifa-2026-predictor-design.md
scripts/: update.py
src/predictor/: config.py  elo.py  evaluate.py  features.py  ingest.py  simulate.py  tournament.py
src/predictor/models/: dixon_coles.py  ensemble.py  ml_model.py
tests/: test_config.py  test_dixon_coles.py  test_elo.py  test_ensemble.py  test_evaluate.py  test_features.py  test_ingest.py  test_ml_model.py  test_simulate.py  test_tournament.py  test_update_smoke.py
tests/fixtures/: sample_matches.json
